# gmb_modeling

./: .gitignore  Makefile  README.md  gmb_modeling.code-workspace  pyproject.toml  requirements.txt
data/raw/merra_download_links/: download_merra.py
docs/: mkdocs.yml
docs/docs/: index.md
gmb_modeling/: __init__.py  config.py  dataset.py  features.py  plots.py  run.py
gmb_modeling/cfg/: all-BC_2016-cutoff.json  rockies_11-04_2020-cutoff_start-2010.json
gmb_modeling/modeling/: analysis.py  predict.py  train.py
models/: cca_sd_gmb_train.pkl  pca_gmb_train.pkl  pca_sd_train.pkl
notebooks/: gmb_processing.ipynb
